package ca.ulaval.glo4002.game.controllers.resources.dtos;

public class ResourceDto {
    public int qtyBurger;
    public int qtySalad;
    public int qtyWater;
}
