@startuml

title __DTOS's Class Diagram__\n

    namespace ca.ulaval.glo4002.game {
      namespace controllers.resourcesGroup {
        namespace dtos {
<<<<<<< HEAD
          class ca.ulaval.glo4002.game.controllers.resourcesGroup.dtos.ResourceAssembler {
=======
          class ca.ulaval.glo4002.game.application.resources.dtos.ResourceAssemblers {
>>>>>>> develop
              + toDto()
              + toDtos()
          }
        }
      }
    }
  

    namespace ca.ulaval.glo4002.game {
      namespace controllers.resourcesGroup {
        namespace dtos {
          class ca.ulaval.glo4002.game.controllers.resourcesGroup.dtos.ResourceCreationDto {
              + qtyBurger : int
              + qtySalad : int
              + qtyWater : int
          }
        }
      }
    }
  

    namespace ca.ulaval.glo4002.game {
      namespace controllers.resourcesGroup {
        namespace dtos {
<<<<<<< HEAD
          class ca.ulaval.glo4002.game.controllers.resourcesGroup.dtos.ResourceDto {
=======
          class ca.ulaval.glo4002.game.application.resources.dtos.ResourcesDto {
>>>>>>> develop
              + qtyBurger : int
              + qtySalad : int
              + qtyWater : int
          }
        }
      }
    }
  

    namespace ca.ulaval.glo4002.game {
      namespace controllers.resourcesGroup {
        namespace dtos {
          class ca.ulaval.glo4002.game.controllers.resourcesGroup.dtos.ResourceDtoAssembler {
              + fromRequest()
              + toResponse()
              + toResponse()
          }
        }
      }
    }
  

    namespace ca.ulaval.glo4002.game {
      namespace controllers.resourcesGroup {
        namespace dtos {
          class ca.ulaval.glo4002.game.controllers.resourcesGroup.dtos.ResourceRequest {
              + qtyBurger : int
              + qtySalad : int
              + qtyWater : int
          }
        }
      }
    }
  

    namespace ca.ulaval.glo4002.game {
      namespace controllers.resourcesGroup {
        namespace dtos {
          class ca.ulaval.glo4002.game.controllers.resourcesGroup.dtos.ResourceResponse {
              + qtyBurger : int
              + qtySalad : int
              + qtyWater : int
          }
        }
      }
    }
  

    namespace ca.ulaval.glo4002.game {
      namespace controllers.resourcesGroup {
        namespace dtos {
          class ca.ulaval.glo4002.game.controllers.resourcesGroup.dtos.ResourcesResponse {
          }
        }
      }
    }
  

  ca.ulaval.glo4002.game.controllers.resourcesGroup.dtos.ResourcesResponse o-- ca.ulaval.glo4002.game.controllers.resourcesGroup.dtos.ResourceResponse : consumed
  ca.ulaval.glo4002.game.controllers.resourcesGroup.dtos.ResourcesResponse o-- ca.ulaval.glo4002.game.controllers.resourcesGroup.dtos.ResourceResponse : expired
  ca.ulaval.glo4002.game.controllers.resourcesGroup.dtos.ResourcesResponse o-- ca.ulaval.glo4002.game.controllers.resourcesGroup.dtos.ResourceResponse : fresh


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
